Leetcode #797 All Paths From Source to Target
Refactor.